网关添加鉴权、xss处理

--- a/bryce-cloud-auth/src/main/resources/application.yml
+++ b/bryce-cloud-auth/src/main/resources/application.yml
@@ -25,6 +25,7 @@ spring:
       - optional:nacos:application-endpoint.yaml
       - optional:nacos:application-feign.yaml
       - optional:nacos:application-sentinel.yaml
+      - optional:nacos:application-jwt.yaml
       - optional:nacos:bryce-cloud-auth.yaml
 
 ---
