--- a/bryce-cloud-module/bryce-cloud-monitor/src/main/resources/application.yml
+++ b/bryce-cloud-module/bryce-cloud-monitor/src/main/resources/application.yml
@@ -20,4 +20,6 @@ spring:
     import:
       - optional:nacos:application-common.yaml
       - optional:nacos:application-cache.yaml
+      - optional:nacos:application-jwt.yaml
       - optional:nacos:application-endpoint.yaml
+      - optional:nacos:bryce-cloud-monitor.yaml
