--- a/bryce-cloud-module/bryce-cloud-system/src/main/resources/application.yml
+++ b/bryce-cloud-module/bryce-cloud-system/src/main/resources/application.yml
@@ -26,6 +26,8 @@ spring:
       - optional:nacos:application-common.yaml
       - optional:nacos:application-xxl-job.yaml
       - optional:nacos:application-seata.yaml
+      - optional:nacos:application-seata.yaml
+      - optional:nacos:application-jwt.yaml
       - optional:nacos:bryce-cloud-system.yaml
 
 seata:
